--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,11 +7,14 @@ environment:
   sdk: ^3.7.2
 
 dependencies:
+  dio: ^5.8.0+1
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.1.1
   flutter_svg: ^2.2.0
   gap: ^3.0.1
   go_router: ^15.2.3
+  lottie: ^3.3.1
   pinput: ^5.0.1
 
 dev_dependencies:
