--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   go_router: ^15.2.3
   lottie: ^3.3.1
   pinput: ^5.0.1
+  shared_preferences: ^2.5.3
+  carousel_slider: ^5.1.1
+  smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
   flutter_test:
