--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   shared_preferences: ^2.5.3
   carousel_slider: ^5.1.1
   smooth_page_indicator: ^1.2.1
+  skeletonizer: ^2.1.0
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
